[gd_scene load_steps=14 format=2]

[ext_resource path="res://Escena/level_construction/portal.tscn" type="PackedScene" id=1]
[ext_resource path="res://Escena/level_construction/tilemap/tile_map.tres" type="TileSet" id=2]
[ext_resource path="res://Escena/enemies/BossDemon.tscn" type="PackedScene" id=3]
[ext_resource path="res://Escena/levels/boss01.gd" type="Script" id=4]
[ext_resource path="res://Escena/archer.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Maps/parallax_demon_woods_pack/layers/parallax-demon-woods-far-trees.png" type="Texture" id=6]
[ext_resource path="res://Assets/Maps/parallax_demon_woods_pack/layers/parallax-demon-woods-close-trees.png" type="Texture" id=7]
[ext_resource path="res://Assets/Maps/parallax_demon_woods_pack/layers/parallax-demon-woods-mid-trees.png" type="Texture" id=8]
[ext_resource path="res://Assets/Maps/parallax_demon_woods_pack/layers/parallax-demon-woods-bg.png" type="Texture" id=9]
[ext_resource path="res://Escena/level_construction/spawner.tscn" type="PackedScene" id=10]
[ext_resource path="res://Escena/enemies/stones.tscn" type="PackedScene" id=11]
[ext_resource path="res://Escena/target.tscn" type="PackedScene" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 42, 43.5 )

[node name="Boss01" type="Node2D"]
script = ExtResource( 4 )

[node name="Limits" type="Node2D" parent="."]

[node name="limit_downer_right" type="Position2D" parent="Limits"]
position = Vector2( 995, 434 )

[node name="limit_upper_left" type="Position2D" parent="Limits"]
position = Vector2( -3, 4 )

[node name="Archer" parent="." instance=ExtResource( 5 )]
position = Vector2( 133, 269 )
y_high = -200

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -65536, 0, 524290, -65508, 0, 524290, 0, 0, 589824, 28, 0, 589824, 65536, 0, 589824, 65564, 0, 589824, 131072, 0, 589824, 131100, 0, 589824, 196608, 0, 589824, 196636, 0, 589824, 262144, 0, 589824, 262172, 0, 589824, 327680, 0, 458756, 327681, 0, 786434, 327707, 0, 786432, 327708, 0, 589839, 393216, 0, 589824, 393244, 0, 589824, 458752, 0, 589824, 458780, 0, 589824, 524288, 0, 589824, 524316, 0, 589824, 589824, 0, 589828, 589825, 0, 393217, 589826, 0, 1, 589827, 0, 393217, 589828, 0, 393217, 589829, 0, 393217, 589830, 0, 1, 589831, 0, 393217, 589832, 0, 393217, 589833, 0, 393217, 589834, 0, 393217, 589835, 0, 393217, 589836, 0, 393217, 589837, 0, 393217, 589838, 0, 1, 589839, 0, 393217, 589840, 0, 1, 589841, 0, 1, 589842, 0, 1, 589843, 0, 393217, 589844, 0, 1, 589845, 0, 393217, 589846, 0, 1, 589847, 0, 393217, 589848, 0, 393217, 589849, 0, 393217, 589850, 0, 1, 589851, 0, 393217, 589852, 0, 327695, 655360, 0, 65536, 655361, 0, 65537, 655362, 0, 65537, 655363, 0, 65537, 655364, 0, 65537, 655365, 0, 65537, 655366, 0, 65537, 655367, 0, 65537, 655368, 0, 65537, 655369, 0, 65537, 655370, 0, 65537, 655371, 0, 65537, 655372, 0, 65537, 655373, 0, 65537, 655374, 0, 65537, 655375, 0, 65537, 655376, 0, 65537, 655377, 0, 65537, 655378, 0, 65537, 655379, 0, 65537, 655380, 0, 65537, 655381, 0, 65537, 655382, 0, 65537, 655383, 0, 65537, 655384, 0, 65537, 655385, 0, 65537, 655386, 0, 65537, 655387, 0, 65537, 655388, 0, 327680, 720896, 0, 65536, 720897, 0, 65537, 720898, 0, 65537, 720899, 0, 65537, 720900, 0, 65537, 720901, 0, 65537, 720902, 0, 65537, 720903, 0, 65537, 720904, 0, 65537, 720905, 0, 65537, 720906, 0, 65537, 720907, 0, 65537, 720908, 0, 65537, 720909, 0, 65537, 720910, 0, 65537, 720911, 0, 65537, 720912, 0, 65537, 720913, 0, 65537, 720914, 0, 65537, 720915, 0, 65537, 720916, 0, 65537, 720917, 0, 65537, 720918, 0, 65537, 720919, 0, 65537, 720920, 0, 65537, 720921, 0, 65537, 720922, 0, 65537, 720923, 0, 65537, 720924, 0, 327680, 786432, 0, 131072, 786433, 0, 131073, 786434, 0, 131073, 786435, 0, 262145, 786436, 0, 262145, 786437, 0, 131073, 786438, 0, 262145, 786439, 0, 262145, 786440, 0, 262145, 786441, 0, 131073, 786442, 0, 262145, 786443, 0, 262145, 786444, 0, 131073, 786445, 0, 262145, 786446, 0, 131073, 786447, 0, 262145, 786448, 0, 131073, 786449, 0, 262145, 786450, 0, 262145, 786451, 0, 131073, 786452, 0, 131073, 786453, 0, 131073, 786454, 0, 262145, 786455, 0, 131073, 786456, 0, 262145, 786457, 0, 262145, 786458, 0, 131073, 786459, 0, 262145, 786460, 0, 131074 )

[node name="portal_enter" parent="." instance=ExtResource( 1 )]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 66, 243 )
rotation = 3.14159

[node name="demon_boss" parent="." instance=ExtResource( 3 )]
position = Vector2( 494, 244 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 412, 240 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -254, 6 )
shape = SubResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 480, 272 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 240, 157 )
texture = ExtResource( 9 )

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 592, 272 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2( 240, 157 )
texture = ExtResource( 8 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 592, 272 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2( 240, 157 )
texture = ExtResource( 6 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 592, 272 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 240, 157 )
texture = ExtResource( 7 )

[node name="spawner" parent="." instance=ExtResource( 10 )]
position = Vector2( 701, 110 )
scene = ExtResource( 11 )
timespawn = 2.5
spawnfrecuency = 1000.0

[node name="spawner2" parent="." instance=ExtResource( 10 )]
position = Vector2( 245, 105 )
scene = ExtResource( 11 )
timespawn = 2.5
spawnfrecuency = 1000.0

[node name="target" parent="." instance=ExtResource( 12 )]
position = Vector2( 883, 141 )
target_target = NodePath("../spawner")

[node name="target2" parent="." instance=ExtResource( 12 )]
position = Vector2( 47, 142 )
target_target = NodePath("../spawner2")

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
